Layout bugs fixed

--- a/src/components/ListComponent/ListComponent.css
+++ b/src/components/ListComponent/ListComponent.css
@@ -1,6 +1,8 @@
 .list-component {
   background: #309398;
   border-radius: 40px 40px 0 0;
+  min-height: 70vh;
+
 }
 .headList {
   text-align: center;
@@ -54,8 +56,8 @@
 @media only screen and (max-height: 770px) {
   .list-component {
     width: 120vw;
-    height: auto;
-    border-radius: 40px 40px 0 0;
+    border-radius: 40px;
+    margin-bottom: 15px;
   }
   .todos-space {
     height: auto;
